[gd_scene load_steps=6 format=3 uid="uid://cxlav2m4nq7r"]

[ext_resource type="PackedScene" uid="uid://4bsb3cpkg8k0" path="res://commons/primitives/cubes/cube_scene.tscn" id="1_cube_base"]
[ext_resource type="Script" path="res://commons/scenes/mapobjects/transport_cube.gd" id="2_transport_script"]

[sub_resource type="BoxShape3D" id="BoxShape3D_detection"]
size = Vector3(1.2, 1.2, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_carry"]
size = Vector3(1.4, 0.2, 1.4)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wide_detection"]
top_radius = 2.0
bottom_radius = 2.0
height = 3.0

[node name="TransportCube" type="Node3D"]
script = ExtResource("2_transport_script")

[node name="CubeBaseStaticBody3D" parent="." instance=ExtResource("1_cube_base")]

[node name="DetectionArea" type="Area3D" parent="CubeBaseStaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape3D" type="CollisionShape3D" parent="CubeBaseStaticBody3D/DetectionArea"]
shape = SubResource("CylinderShape3D_wide_detection")

[node name="CarryArea" type="Area3D" parent="CubeBaseStaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape3D" type="CollisionShape3D" parent="CubeBaseStaticBody3D/CarryArea"]
shape = SubResource("BoxShape3D_carry")

[node name="TransportLabel" type="Label3D" parent="CubeBaseStaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
text = "TRANSPORT"
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="DirectionArrow" type="MeshInstance3D" parent="CubeBaseStaticBody3D"]
transform = Transform3D(0.3, 0, 0, 0, 0.1, 0, 0, 0, 0.8, 0, 0.8, 0)

[connection signal="body_entered" from="CubeBaseStaticBody3D/DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="CubeBaseStaticBody3D/DetectionArea" to="." method="_on_detection_area_body_exited"]
